docs: README quick-start, requirements, accurate status; mark step 1 done in ROADMAP